Some more changes on Wadau Mawasiliano sections

--- a/web-kilimo/wadau.html
+++ b/web-kilimo/wadau.html
@@ -72,7 +72,7 @@
       
                 <div class="col-lg-4 col-md-6 wadau-item">
                     <div class="wadau-wrap">
-                        <img src="assets/img/digital.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/kilimo-1.jpg" class="img-fluid" alt="">
                         <div class="wadau-links">
                             <button class="btn btn-success" data-toggle="modal" data-target="#mboleaModal">Mbolea</button>
                         </div>
@@ -99,7 +99,7 @@
       
                 <div class="col-lg-4 col-md-6 wadau-item">
                     <div class="wadau-wrap">
-                        <img src="assets/img/cabbage-field.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/kilimo-2.jpg" class="img-fluid" alt="">
                         <div class="wadau-links">
                             <button class="btn btn-success" data-toggle="modal" data-target="#masokoModal">Masoko</button>
                         </div>
