Added some more changes

--- a/site/index.html
+++ b/site/index.html
@@ -67,9 +67,7 @@
     <section id="work-with">
       <h2 class="heading-2">Work With Us</h2>
       <p class="para">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. on molestias
-        voluptatem totam quo? Corporis, quaerat at isteN molestias minus fuga
-        incidunt.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci, consequatur voluptates? Quam, perferendis aspernatur accusamus in error architecto nisi deleniti odit voluptate, ullam culpa beatae recusandae, explicabo quisquam earum tempora.
       </p>
       <div class="container">
         <img src="assets/img/backg.jpg" alt="" class="show" />
@@ -87,9 +85,7 @@
     <section id="services">
       <h2 class="heading-2">Our Services</h2>
       <p class="para">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. on molestias
-        voluptatem totam quo? Corporis, quaerat at isteN molestias minus fuga
-        incidunt.
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, assumenda ratione. Suscipit doloremque ratione possimus, maxime ipsa minus itaque iure, esse veniam quaerat assumenda hic. Qui incidunt fuga eveniet voluptates.
       </p>
       <div class="container">
 
@@ -136,9 +132,7 @@
     <section id="works">
       <h2 class="heading-2">Our Works</h2>
       <p class="para">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. on molestias
-        voluptatem totam quo? Corporis, quaerat at isteN molestias minus fuga
-        incidunt.
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minima iste vitae facilis veniam nam, praesentium maiores commodi exercitationem tempore natus minus ipsa atque sapiente aliquid iusto sed quasi nemo.
       </p>
       <div class="container">
         <div class="card">
@@ -155,7 +149,7 @@
     
         <div class="card">
           <div class="card-img">
-            <img src="assets/img/backg-2.jpg" alt="" class="card-img-top img-fluid" />
+            <img src="assets/img/backg-2.jpg" alt="" class="card-img-top img-fluid"/>
           </div>
           <div class="card-text">
             <p>
@@ -167,7 +161,7 @@
     
         <div class="card">
           <div class="card-img">
-            <img src="assets/img/backg-5.jpeg" alt="" class="card-img-top img-fluid" />
+            <img src="assets/img/backg-5.jpeg" alt="" class="card-img-top img-fluid"/>
           </div>
           <div class="card-text">
             <p>
@@ -183,12 +177,13 @@
         <h2 class="heading-2">Our Partners</h2>
         <p class="para">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. on molestias
-          voluptatem totam quo? Corporis, quaerat at isteN molestias minus fuga
-          incidunt.
+          voluptatem totam quo? Corporis, quaerat at iste.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio non veritatis aspernatur perferendis eaque dignissimos totam consectetur minima sunt quibusdam repellat iste maxime dolorem, unde inventore cumque tempore recusandae officia?
         </p>
       <div class="container">
           <img src="assets/site-icon/logo-4.png" alt="logo" class="partner-logo">
           <img src="assets/site-icon/logo-2.png" alt="logo" class="partner-logo">
+          <img src="assets/site-icon/logo.png" alt="logo" class="partner-logo">
           <img src="assets/site-icon/logo-3.png" alt="logo" class="partner-logo">
       </div>
     </section>
@@ -236,8 +231,7 @@
       <div class="footer-logo">
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, laudantium atque dolorum praesentium eveniet autem sequi corporis nostrum qui consequatur excepturi pariatur et sunt vitae animi iste totam explicabo! Rem.
-          Beatae ad eum minus dolor aut ipsam, doloremque, nesciunt, voluptate ut dignissimos est blanditiis id aperiam. Necessitatibus totam, distinctio mollitia pariatur, dignissimos nemo fugiat, suscipit enim odio possimus placeat magnam?
-          Eveniet ullam sapiente, tempore similique aliquid autem ratione ipsam magni quaerat voluptatibus voluptate maxime itaque velit doloremque distinctio nihil ea, omnis blanditiis, eos in eligendi. Dolor est provident praesentium iusto.
+          Beatae ad eum minus dolor aut ipsam, doloremque, nesciunt, voluptate ut dignissimos est blanditiis id aperiam. Necessitatibus totam, distinctio mollitia pariatur, dignissimos nemo fugiat, suscipit enim odio possimus placeat magnam.
         </p>
         <a href="#home"><img src="assets/site-icon/logo.png" alt="logo" id="navbar-brand"><span id="brand">smartShamba</span></a>
         <p>&copy; All right reserved. smartShamba Limited <span id="year"></span></p>
