Added more changes

--- a/site/index.html
+++ b/site/index.html
@@ -48,12 +48,14 @@
         <br>
         <a href="" class="btn">Join Kilimo</a>
         <div class="right">
+          <span class="log"></span>
           <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest-p"></i></a>
           <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
           <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+          <span class="log-2"></span>
         </div>
       </div>
 
