Changes to  a new website

--- a/Amazing/index.html
+++ b/Amazing/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Amazing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="assets/img/image2.jpg" />
+    <link rel="shortcut icon" href="assets/site-icon/icon.png" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
@@ -30,7 +30,7 @@
   </head>
   <body id="home">
     <!--HEADER_SECTION-->
-    <div class="header py-4 d-flex justify-content-around align-items-center">
+    <div class="header bg-dark py-4 d-flex justify-content-around align-items-center">
       <div class="order-1 text-muted">
         <i
           class="fas fa-users ml-3"
@@ -38,6 +38,7 @@
           data-placement="right"
           title="Staff Only"
         ></i>
+        
         <i
           class="fas fa-search ml-3"
           data-toggle="tooltip"
@@ -52,15 +53,15 @@
         ></i>
       </div>
       <div class="order-2">
-        <p id="lead" class="lead text-center text-secondary">
+        <p id="lead" class="lead text-center text-warning">
           <i class="fas fa-shipping-fast"></i> FAST FREE SHIPPING ON ORDERS OVER
           <small><strong>$125</strong></small> GLOBALLY
           <i class="fas fa-globe"></i>
         </p>
       </div>
       <div class="order-3">
-        <a id="signin" href="signin.php" class="text-secondary">Sign In |</a>
-        <a id="signup" href="signup.php" class="text-danger">Sign Up</a>
+        <a id="signin" href="signin.php" class="text-light">Sign In |</a>
+        <a id="signup" href="signup.php" class="text-warning">Sign Up</a>
       </div>
     </div>
     <nav
