Some changes on new arrivals and best sellers sections

--- a/Amazing/index.html
+++ b/Amazing/index.html
@@ -24,6 +24,8 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Comfortaa:wght@500;700&family=PT+Sans&family=Quicksand:wght@400;600&family=Roboto&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Balsamiq+Sans&family=Comfortaa:wght@500;700&family=Exo&family=Fira+Sans+Condensed:wght@300;400&family=Maven+Pro:wght@500&family=PT+Sans&family=Quicksand:wght@400;600&family=Roboto&family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Open+Sans+Condensed:wght@300&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/index.css" />
     <script src="assets/js/index.js"></script>
@@ -214,17 +216,15 @@
     <section class="py-3 bg-light"></section>
 
     <!--NEW ARRIVALS_BODY-->
-    <section class="bg-light py-5">
+    <section id="new" class="bg-light py-5">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div id="card-1" class="card">
               <img
                 id="sneakers"
-                src="assets/img/sneakers1.jpg"
+                src="assets/img/new-3.jpg"
                 class="card-img-top img-fluid"
-                onmouseenter="changeImage4();"
-                onmouseleave="defaultImage4();"
               />
               <div class="card-body">
                 <span class="lead" style="font-size: 15px; font-weight: bold;"
@@ -238,14 +238,12 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div id="card-2" class="card">
               <img
                 id="BG"
-                src="assets/img/boys.png"
+                src="assets/img/shirts-3.jpg"
                 class="card-img-top img-fluid"
-                onmouseover="changeImage5();"
-                onmouseout="defaultImage5();"
               />
               <div class="card-body">
                 <span class="lead" style="font-size: 15px; font-weight: bold;"
@@ -259,14 +257,12 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card" id="card-3">
               <img
                 id="bags"
-                src="assets/img/bag1.jpg"
+                src="assets/img/simple-8.jpg"
                 class="card-img-top img-fluid"
-                onmouseenter="changeImage6();"
-                onmouseleave="defaultImage6();"
               />
               <div class="card-body">
                 <span class="lead" style="font-size: 15px; font-weight: bold;"
@@ -280,7 +276,7 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <!-- <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <div class="card" id="card-4">
               <img
                 id="W-tops"
@@ -299,18 +295,16 @@
                 <small class="text-muted">$33</small>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div class="row mt-4">
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card" id="card-5">
               <img
                 id="boys"
-                src="assets/img/boys1.png"
+                src="assets/img/sandals-1.jpg"
                 class="card-img-top img-fluid"
-                onmouseenter="changeImage();"
-                onmouseleave="defaultImage();"
               />
               <div class="card-body">
                 <span class="lead" style="font-size: 15px; font-weight: bold;"
@@ -324,14 +318,12 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card" id="card-6">
               <img
                 id="girls"
-                src="assets/img/girls-1.png"
+                src="assets/img/shirts-4.jpg"
                 class="card-img-top img-fluid"
-                onmouseover="changeImage1();"
-                onmouseout="defaultImage1();"
               />
               <div class="card-body">
                 <span class="lead" style="font-size: 15px; font-weight: bold;"
@@ -345,14 +337,12 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card" id="card-7">
               <img
                 id="men"
-                src="assets/img/men1.png"
+                src="assets/img/simple-9.jpg"
                 class="card-img-top img-fluid"
-                onmouseenter="changeImage2();"
-                onmouseleave="defaultImage2();"
               />
               <div class="card-body">
                 <span class="lead" style="font-size: 15px; font-weight: bold;"
@@ -366,7 +356,7 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <!-- <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <div class="card" id="card-8">
               <img
                 id="women"
@@ -385,14 +375,14 @@
                 <small class="text-muted">$66</small>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
 
     <!--Best Sellers' Section-->
-    <section id="best sellers" class="py-5 bg-dark">
-      <h1 class="display-4 text-light text-center mb-5" style="opacity: 0.6;">
+    <section id="best-sellers" class="py-5" style="background: rgba(236, 234, 230, 0.849);">
+      <h1 class="display-4 text-secondary text-center mb-5">
         Best Sellers
       </h1>
       <div class="container">
@@ -451,11 +441,11 @@
       </div>-->
 
         <div class="row mt-3">
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
               <img
                 id="transform"
-                src="assets/img/shoe2.png"
+                src="assets/img/simple.jpg"
                 class="card-img-top img-fluid"
               />
               <div class="card-body">
@@ -470,11 +460,11 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card" id="card-9">
               <img
-                id="transform"
-                src="assets/img/polo.png"
+                id="transform-1"
+                src="assets/img/simple-5.jpg"
                 class="card-img-top img-fluid"
               />
               <div class="card-body">
@@ -489,11 +479,11 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card" id="card-10">
               <img
-                id="transform"
-                src="assets/img/shoe.png"
+                id="transform-2"
+                src="assets/img/simple-7.jpg"
                 class="card-img-top img-fluid"
               />
               <div class="card-body">
@@ -508,10 +498,10 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <!-- <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <div class="card" id="card-11">
               <img
-                id="transform"
+                id="transform-3"
                 src="assets/img/short.png"
                 class="card-img-top img-fluid"
               />
@@ -525,15 +515,15 @@
                 <small class="text-muted">$55</small>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
-        <div class="row mt-3">
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+        <div class="row mt-4">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
               <img
-                id="transform"
-                src="assets/img/kids1.png"
+                id="transform-4"
+                src="assets/img/sandals.jpg"
                 class="card-img-top img-fluid"
               />
               <div class="card-body">
@@ -548,11 +538,11 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card" id="card-12">
               <img
-                id="transform"
-                src="assets/img/rubbers.png"
+                id="transform-5"
+                src="assets/img/new-4.jpg"
                 class="card-img-top img-fluid"
               />
               <div class="card-body">
@@ -567,11 +557,11 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <div class="card" id="card-13">
               <img
-                id="transform"
-                src="assets/img/kids3.png"
+                id="transform-6"
+                src="assets/img/simple-3.jpg"
                 class="card-img-top img-fluid"
               />
               <div class="card-body">
@@ -586,10 +576,10 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
+          <!-- <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
             <div class="card" id="card-14">
               <img
-                id="transform"
+                id="transform-7"
                 src="assets/img/kids4.png"
                 class="card-img-top img-fluid"
               />
@@ -603,7 +593,7 @@
                 <small class="text-muted">$67</small>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -613,7 +603,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1 class="text-muted">Sign Up For Our Newsletter</h1>
+            <h1 class="text-muted py-3">Sign Up For Our Newsletter</h1>
             <p
               class="lead text-light"
               style="font-size: 17px; opacity: 0.5;"
@@ -755,8 +745,81 @@
         pause: "hover"
       });
 
-      // iMAGE OPACITY
-      //document.getElementById('showcase').style.opacity = 0.3;
+
+      // Change an images on hover
+
+      $('#transform').mouseenter(function() {
+        document.getElementById('transform').src = 'assets/img/simple-2.jpg';
+      });
+
+      $('#transform').mouseleave(function() {
+        document.getElementById('transform').src = 'assets/img/simple.jpg';
+      });
+
+
+      $('#transform').mouseenter(function() {
+        document.getElementById('transform').src = 'assets/img/simple-2.jpg';
+      });
+
+      $('#transform').mouseleave(function() {
+        document.getElementById('transform').src = 'assets/img/simple.jpg';
+      });
+
+
+      $('#transform').mouseenter(function() {
+        document.getElementById('transform').src = 'assets/img/simple-2.jpg';
+      });
+
+      $('#transform').mouseleave(function() {
+        document.getElementById('transform').src = 'assets/img/simple.jpg';
+      });
+
+
+      $('#transform').mouseenter(function() {
+        document.getElementById('transform').src = 'assets/img/simple-2.jpg';
+      });
+
+      $('#transform').mouseleave(function() {
+        document.getElementById('transform').src = 'assets/img/simple.jpg';
+      });
+
+
+      $('#transform').mouseenter(function() {
+        document.getElementById('transform').src = 'assets/img/simple-2.jpg';
+      });
+
+      $('#transform').mouseleave(function() {
+        document.getElementById('transform').src = 'assets/img/simple.jpg';
+      });
+
+
+      $('#transform').mouseenter(function() {
+        document.getElementById('transform').src = 'assets/img/simple-2.jpg';
+      });
+
+      $('#transform').mouseleave(function() {
+        document.getElementById('transform').src = 'assets/img/simple.jpg';
+      });
+
+
+      $('#transform').mouseenter(function() {
+        document.getElementById('transform').src = 'assets/img/simple-2.jpg';
+      });
+
+      $('#transform').mouseleave(function() {
+        document.getElementById('transform').src = 'assets/img/simple.jpg';
+      });
+
+
+      $('#transform').mouseenter(function() {
+        document.getElementById('transform').src = 'assets/img/simple-2.jpg';
+      });
+
+      $('#transform').mouseleave(function() {
+        document.getElementById('transform').src = 'assets/img/simple.jpg';
+      });
+
+
     </script>
   </body>
 </html>
