--- a/Amazing/index.html
+++ b/Amazing/index.html
@@ -30,15 +30,9 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Balsamiq+Sans&family=Comfortaa:wght@500;700&family=Exo&family=Fira+Sans+Condensed:wght@300;400&family=Maven+Pro:wght@500&family=PT+Sans&family=Quicksand:wght@400;600&family=Roboto&family=Roboto+Condensed&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abel&family=Open+Sans+Condensed:wght@300&family=Ubuntu:wght@500&display=swap"
-      rel="stylesheet"
-    />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Dancing+Script:wght@600;700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       type="text/css"
@@ -324,7 +318,7 @@
 
         <div class="row mt-4">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card" id="card-5">
+            <div class="card" id="card-4">
               <img
                 id="boys"
                 src="assets/img/sandals-1.jpg"
@@ -343,7 +337,7 @@
           </div>
 
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card" id="card-6">
+            <div class="card" id="card-5">
               <img
                 id="girls"
                 src="assets/img/shirts-4.jpg"
@@ -362,7 +356,7 @@
           </div>
 
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card" id="card-7">
+            <div class="card" id="card-6">
               <img
                 id="men"
                 src="assets/img/simple-9.jpg"
@@ -391,7 +385,7 @@
       <div class="container">
         <div class="row mt-3">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card">
+            <div class="card" id="card-1">
               <img
                 id="transform"
                 src="assets/img/simple.jpg"
@@ -410,7 +404,7 @@
           </div>
 
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card" id="card-9">
+            <div class="card" id="card-2">
               <img
                 id="transform-1"
                 src="assets/img/simple-5.jpg"
@@ -429,7 +423,7 @@
           </div>
 
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card" id="card-10">
+            <div class="card" id="card-3">
               <img
                 id="transform-2"
                 src="assets/img/simple-7.jpg"
@@ -450,7 +444,7 @@
 
         <div class="row mt-4">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card">
+            <div class="card" id="card-4">
               <img
                 id="transform-4"
                 src="assets/img/sandals.jpg"
@@ -469,7 +463,7 @@
           </div>
 
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card" id="card-12">
+            <div class="card" id="card-5">
               <img
                 id="transform-5"
                 src="assets/img/new-4.jpg"
@@ -488,7 +482,7 @@
           </div>
 
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <div class="card" id="card-13">
+            <div class="card" id="card-6">
               <img
                 id="transform-6"
                 src="assets/img/simple-3.jpg"
@@ -572,7 +566,7 @@
           <div class="container">
             <hr />
           </div>
-          <span class="lead text-light" style="opacity: 0.5; font-size: 15px;">
+          <span id="copy" class="lead text-light">
             &copy; Amazing <span id="year"></span>, All rights reserved
           </span>
         </div>
