--- a/Amazing/index.html
+++ b/Amazing/index.html
@@ -642,70 +642,36 @@
       });
 
       // Change an images on hover
+      $(document).ready(function() {
 
-      $("#transform").mouseenter(function() {
-        document.getElementById("transform").src = "assets/img/simple-2.jpg";
+      // onmouseenter
+      $("#transform").mouseenter(
+        function() {
+        
+        $(this).fadeOut(500, function() {
+          $(this).attr('src', "assets/img/simple-2.jpg");
+        });
+
+        $(this).fadeIn(500, function() {
+          $(this).attr('src', "assets/img/simple-2.jpg");
+        });
       });
 
-      $("#transform").mouseleave(function() {
-        document.getElementById("transform").src = "assets/img/simple.jpg";
-      });
+      // onmouseleave
+      $("#transform").mouseleave(
+        function() {
+        
+        $(this).fadeOut(500, function() {
+          $(this).attr('src', "assets/img/simple.jpg");
+        });
 
-      $("#transform").mouseenter(function() {
-        document.getElementById("transform").src = "assets/img/simple-2.jpg";
-      });
+        $(this).fadeIn(500, function() {
+          $(this).attr('src', "assets/img/simple.jpg");
+        });
 
-      $("#transform").mouseleave(function() {
-        document.getElementById("transform").src = "assets/img/simple.jpg";
       });
+    });
 
-      $("#transform").mouseenter(function() {
-        document.getElementById("transform").src = "assets/img/simple-2.jpg";
-      });
-
-      $("#transform").mouseleave(function() {
-        document.getElementById("transform").src = "assets/img/simple.jpg";
-      });
-
-      $("#transform").mouseenter(function() {
-        document.getElementById("transform").src = "assets/img/simple-2.jpg";
-      });
-
-      $("#transform").mouseleave(function() {
-        document.getElementById("transform").src = "assets/img/simple.jpg";
-      });
-
-      $("#transform").mouseenter(function() {
-        document.getElementById("transform").src = "assets/img/simple-2.jpg";
-      });
-
-      $("#transform").mouseleave(function() {
-        document.getElementById("transform").src = "assets/img/simple.jpg";
-      });
-
-      $("#transform").mouseenter(function() {
-        document.getElementById("transform").src = "assets/img/simple-2.jpg";
-      });
-
-      $("#transform").mouseleave(function() {
-        document.getElementById("transform").src = "assets/img/simple.jpg";
-      });
-
-      $("#transform").mouseenter(function() {
-        document.getElementById("transform").src = "assets/img/simple-2.jpg";
-      });
-
-      $("#transform").mouseleave(function() {
-        document.getElementById("transform").src = "assets/img/simple.jpg";
-      });
-
-      $("#transform").mouseenter(function() {
-        document.getElementById("transform").src = "assets/img/simple-2.jpg";
-      });
-
-      $("#transform").mouseleave(function() {
-        document.getElementById("transform").src = "assets/img/simple.jpg";
-      });
     </script>
   </body>
 </html>
