--- a/Amazing/index.html
+++ b/Amazing/index.html
@@ -255,7 +255,7 @@
     <section class="py-3 bg-light"></section>
 
     <!--NEW ARRIVALS_BODY-->
-    <section id="new" class="bg-light py-5">
+    <section id="new" class="bg-light pt-4 pb-5">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
