--- a/Amazing/index.html
+++ b/Amazing/index.html
@@ -174,7 +174,7 @@
               ></i>
             </div>
 
-            <div class="d-md-none d-sm-block pb-3" id="sign">
+            <div class="d-md-none d-sm-block pt-2 pb-3" id="sign">
               <a id="signin" href="#signin.php" class="text-light">Sign In </a>
               <span class="text-light">|</span>
               <a id="signup" href="#signup.php" class="text-warning">Sign Up</a>
