Added a site folder that contains website files in a assets folder

--- a/web-kilimo/index.html
+++ b/web-kilimo/index.html
@@ -19,7 +19,7 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <!-- Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/index.css" rel="stylesheet">
   <!--modal-video-CSS-->
   <link rel="stylesheet" href="assets/modal-video/css/modal-video.min.css">
 
@@ -41,7 +41,7 @@
           <li class="active"><a href="#home">Nyumbani</a></li>
           <li><a href="#about-partners">Kuhusu Sisi</a></li>
           <li><a href="#services">Huduma zetu</a></li>
-          <li><a href="wadau.html">Wadau</a></li>
+          <li><a href="assets/site/wadau.html">Wadau</a></li>
           <li><a href="#team">Timu</a></li>
           <li><a href="#contact">Wasiliana nasi</a></li>
           <!--<li class="get-started"><a href="#services">Anza Kutumia Huduma zetu Sasa</a></li>-->
@@ -177,13 +177,13 @@
                 <img src="assets/img/agri-tech.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="e-shamba.html">e-SHAMBA</a></h5>
+                <h5 class="card-title"><a href="assets/site/e-shamba.html">e-SHAMBA</a></h5>
                 <p class="card-text">
                   Huduma hii ina Vipindi vya Sauti na video Kutoka katika mashamba Darasa yetu,
                   Programu Hizi zitalenga kumjengea uwezo mkulima aweze kufanya kilimo cha kisasa kwa kuona kutoka kwa wataalamu wetu wa kilimo na wakulima wenzao kupitia Rekodi za video.</p>
                   <p>Picha za video zenye maelekezo kwa vitendo zita patikana kupitia Chaneli yetu ya Youtube zikiwa na mauhudhui mbalimbali.
                 </p>
-                <div class="read-more"><a href="e-shamba.html"><i class="icofont-arrow-right"></i> Soma Zaidi</a></div>
+                <div class="read-more"><a href="assets/site/e-shamba.html"><i class="icofont-arrow-right"></i> Soma Zaidi</a></div>
               </div>
             </div>
           </div>
