--- a/web-kilimo/assets/site/meru.html
+++ b/web-kilimo/assets/site/meru.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>e-Kilimo | Wadau</title>
     <!-- Favicons -->
-    <link href="assets/img/e-kilimo.png" rel="icon">
+    <link href="../img/e-kilimo.png" rel="icon">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <!--FontAwesome-->
@@ -14,13 +14,13 @@
     <!--Bootstrap CDN CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/icofont/icofont.min.css" rel="stylesheet">
+    <link href="../vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../vendor/venobox/venobox.css" rel="stylesheet">
+    <link href="../vendor/aos/aos.css" rel="stylesheet">
     <!-- Main CSS File -->
-    <link href="assets/css/meru.css" rel="stylesheet">
+    <link href="../css/meru.css" rel="stylesheet">
 
 </head>
 <body>
@@ -30,17 +30,17 @@
         <div class="container d-flex">
             <!--logo-->
             <div class="logo mr-auto">
-                <h1 class="text-light"><a href="#home"><img src="assets/img/e-kilimo.png" alt="" class="img-fluid" id="logo"> e-Kilimo<span>.</span></a></h1>
+                <h1 class="text-light"><a href="#home"><img src="../img/e-kilimo.png" alt="" class="img-fluid" id="logo"> e-Kilimo<span>.</span></a></h1>
             </div>
             <!-- .nav-menu -->
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li><a href="index.html">Nyumbani</a></li>
-                    <li><a href="index.html#about-partners">Kuhusu Sisi</a></li>
-                    <li><a href="index.html#services">Huduma zetu</a></li>
+                    <li><a href="/index.html">Nyumbani</a></li>
+                    <li><a href="/index.html#about-partners">Kuhusu Sisi</a></li>
+                    <li><a href="/index.html#services">Huduma zetu</a></li>
                     <li class="active"><a href="wadau.html">Wadau</a></li>
-                    <li><a href="index.html#team">Timu</a></li>
-                    <li><a href="index.html#contact">Wasiliana nasi</a></li>
+                    <li><a href="/index.html#team">Timu</a></li>
+                    <li><a href="/index.html#contact">Wasiliana nasi</a></li>
                 </ul>
             </nav>
             <!-- End .nav-menu -->
@@ -272,17 +272,17 @@
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
     
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/venobox/venobox.min.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="../vendor/php-email-form/validate.js"></script>
+    <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../vendor/venobox/venobox.min.js"></script>
+    <script src="../vendor/aos/aos.js"></script>
     <!--Popper CDN-->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <!-- Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="../js/main.js"></script>
     <script>
 
         // Get the year
