Added a site folder that contains website files in a assets folder

--- a/web-kilimo/assets/site/wadau.html
+++ b/web-kilimo/assets/site/wadau.html
@@ -36,11 +36,11 @@
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
                     <li><a href="/index.html">Nyumbani</a></li>
-                    <li><a href="index.html#about-partners">Kuhusu Sisi</a></li>
-                    <li><a href="index.html#services">Huduma zetu</a></li>
+                    <li><a href="/index.html#about-partners">Kuhusu Sisi</a></li>
+                    <li><a href="/index.html#services">Huduma zetu</a></li>
                     <li class="active"><a href="wadau.html">Wadau</a></li>
-                    <li><a href="index.html#team">Timu</a></li>
-                    <li><a href="index.html#contact">Wasiliana nasi</a></li>
+                    <li><a href="/index.html#team">Timu</a></li>
+                    <li><a href="/index.html#contact">Wasiliana nasi</a></li>
                 </ul>
             </nav>
             <!-- End .nav-menu -->
