--- a/web-kilimo/assets/site/wadau.html
+++ b/web-kilimo/assets/site/wadau.html
@@ -35,7 +35,7 @@
             <!-- .nav-menu -->
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li><a href="/index.html">Nyumbani</a></li>
+                    <li><a href="\index.html">Nyumbani</a></li>
                     <li><a href="/index.html#about-partners">Kuhusu Sisi</a></li>
                     <li><a href="/index.html#services">Huduma zetu</a></li>
                     <li class="active"><a href="wadau.html">Wadau</a></li>
